--- a/styles.css
+++ b/styles.css
@@ -116,10 +116,28 @@ select {
 }
 
 #filtrosbtn {
-  background-color: orange;
+  background-color: #fbbc42;
   color: black;
   font-weight: bold;
   padding: 10px 15px;
   border: none;
   cursor: pointer;
+}
+
+#masinfopersonaje {
+  background-color: blue;
+  color: white;
+  border-radius: 20px;
+  text-align: center;
+}
+#masinfopersonaje > *{
+  max-width: 500px;
+  max-height: auto;
+}
+
+#masinfopersonaje button  {
+  background-color: #fbbc42;
+  color: black;
+  font-weight: bold;
+  padding: 10px;
 }
